--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>休息循环闹钟</title>
     <script src="../time/time.js"></script>
+    <script id="worker" type="javascript/worker"></script>
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
